name:                distributed-process-aws
version:             0.2.0.0
synopsis:            AWS EC2 Backend for Cloud Haskell http://haskell-distributed.github.com
homepage:            https://github.com/IanConnolly/distributed-process-aws
license:             MIT
license-file:        LICENSE
author:              Ian Connolly
maintainer:          ian@connolly.io
category:            Control
build-type:          Simple
cabal-version:       >=1.10

flag build-demos
  description: Build the demos
  default:     False

library
  build-depends:       base <4.8,
                       filepath,
                       executable-path,
                       libssh2,
                       pureMD5,
                       bytestring,
                       mtl,
                       unix,
                       binary,
                       transformers,
                       cloud-haskell,
                       network-transport,
                       network-transport-tcp,
                       rank1dynamic,
                       distributed-process,
                       distributed-static,
                       aws-service-api
  exposed-modules:     Control.Distributed.Process.Backend.AWS
  extensions:          ViewPatterns,
                       RankNTypes,
                       ExistentialQuantification,
                       ScopedTypeVariables,
                       DeriveDataTypeable,
                       GeneralizedNewtypeDeriving
  hs-source-dirs:      src
  default-language:    Haskell2010

executable cloud-haskell-aws-echo
  if flag(build-demos)
    build-depends:     base <4.8,
                       filepath,
                       executable-path,
                       libssh2,
                       pureMD5,
                       bytestring,
                       mtl,
                       unix,
                       binary,
                       transformers,
                       cloud-haskell,
                       network-transport,
                       network-transport-tcp,
                       rank1dynamic,
                       distributed-process,
                       distributed-process-aws,
                       distributed-static,
                       aws-service-api
  else
    buildable: False
  Main-Is:           demos/Echo.hs


executable cloud-haskell-aws-ping
  if flag(build-demos)
    build-depends:     base <4.8,
                       filepath,
                       executable-path,
                       libssh2,
                       pureMD5,
                       bytestring,
                       mtl,
                       unix,
                       binary,
                       transformers,
                       cloud-haskell,
                       network-transport,
                       network-transport-tcp,
                       rank1dynamic,
                       distributed-process,
                       distributed-process-aws,
                       distributed-static,
                       aws-service-api
  else
    buildable: False
  Main-Is:           demos/Ping.hs

executable cloud-haskell-aws-fib
  if flag(build-demos)
    build-depends:     base <4.8,
                       filepath,
                       executable-path,
                       libssh2,
                       pureMD5,
                       bytestring,
                       mtl,
                       unix,
                       binary,
                       binary-generic,
                       random,
                       transformers,
                       cloud-haskell,
                       network-transport,
                       network-transport-tcp,
                       rank1dynamic,
                       distributed-process,
                       distributed-process-aws,
                       distributed-static,
                       aws-service-api
  else
    buildable: False
  Main-Is:           demos/Fib.hs
